src/tests/snapshots/hebi__tests__native_fn_call_kw__call_kw_simple.snap
---
source: src/tests/native_fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
print simple(v=1)


# Result (success):
none

# Stdout:
value: 1


