src/tests/snapshots/hebi__tests__native_fn_call_kw__call_kw_simple_missing_args.snap
---
source: src/tests/native_fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
print simple()


# Result (error):
mismatched keyword params: missing v

# Stdout:


