src/tests/snapshots/hebi__tests__native_fn_call_kw__call_kw_simple_too_many_args.snap
---
source: src/tests/native_fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
print simple(v=1,test=2)


# Result (error):
mismatched keyword params: could not recognize test

# Stdout:


