src/tests/snapshots/hebi__tests__native_fn_call_kw__call_kw_with_default.snap
---
source: src/tests/native_fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
print with_default(a=1)
print with_default(a=1, b=2)
print with_default(b=2, a=1)


# Result (success):
none

# Stdout:
1+100=101
1+2=3
1+2=3


