src/tests/snapshots/hebi__tests__native_fn_call_kw__call_kw_with_default_2_missing_args.snap
---
source: src/tests/native_fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
print with_default_2()


# Result (error):
mismatched keyword params: missing a

# Stdout:


