src/tests/snapshots/hebi__tests__native_fn_call_kw__call_kw_with_default_2_too_many_args2.snap
---
source: src/tests/native_fn_call_kw.rs
expression: snapshot
---
# Modules:


# Input:
print with_default_2(a=1,b=2,c=3,d=4)


# Result (error):
mismatched keyword params: could not recognize c, d

# Stdout:


